몬스터 구조 변경 및 비헤이비어 트리 작업 중.
몬스터 구조 변경 및 비헤이비어 트리 작업 중.
우선 기능을 구현하고 디테일은 나중에 올리자...!

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -176,9 +176,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLClient\Manager\EnemyManager.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\AI_Enemy_Elite.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\AI_Enemy_Far.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\AI_Enemy_Near.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\ParticleData.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\ParticleManager.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BoidsMoveTo.cpp" />
@@ -212,7 +209,7 @@
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsInAttackRange.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsLookTarget.cpp" />
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\AI_Enemy.cpp" />
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\AI_EnemyBasic.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\CoroutineLogTest.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\CreateAndDestroyTest.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\DebugUI.cpp" />
@@ -233,9 +230,6 @@
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyManager.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\AI_Enemy_Elite.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\AI_Enemy_Far.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\AI_Enemy_Near.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BoidsMoveTo.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\Enemy.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CharacterBase.h" />
@@ -259,7 +253,7 @@
     <ClInclude Include="include\DUOLClient\ECS\Component\TestParticle.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\ThirdPersonCamera.h" />
     <ClInclude Include="include\DUOLClient\Export_Client.h" />
-    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\AI_EnemyBase.h" />
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\AI_EnemyBasic.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CoroutineLogTest.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CreateAndDestroyTest.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\EnableTest.h" />
