--- a/DUOLSound/DUOLSound.vcxproj.filters
+++ b/DUOLSound/DUOLSound.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="src\DUOLSound\SoundSystem.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\DUOLSound\SoundSystem.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
