--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -228,6 +228,7 @@
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyAttacks.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyManager.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BoidsMoveTo.h" />
